fixed jumping cards

--- a/src/components/Cards/CardItem.module.css
+++ b/src/components/Cards/CardItem.module.css
@@ -2,19 +2,10 @@
   height: 400px;
   width: 250px;
   border-radius: 15px;
-  margin-top: 100px;
   padding: 1rem;
   background: linear-gradient(110deg, #fdbb2d 0%, #3a1c71 100%);
   box-shadow: 0px 5px 20px -10px #3a1c71;
-}
-.frontCard {
-  height: 400px;
-  width: 250px;
-  border-radius: 15px;
-  margin-top: 100px;
-  padding: 1rem;
-  background: linear-gradient(110deg, #fdbb2d 0%, #3a1c71 100%);
-  box-shadow: 0px 5px 20px -10px #3a1c71;
+  margin: 0rem 1.5rem 1.5rem;
 }
 .borderCard {
   background-color: rgba(0, 0, 0, 0.7);
@@ -49,7 +40,6 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   margin: 3rem auto;
   width: 70%;
 }
